[gd_scene load_steps=12 format=3 uid="uid://ck5g1f1tlsop3"]

[ext_resource type="Script" path="res://scenes/Levels/Interiors/StarterHouseInterior.gd" id="1_5lh2m"]
[ext_resource type="Texture2D" uid="uid://cb7m1or8j25ig" path="res://assets/Sprites/House/Buildings/Tent/Tent_Interior.png" id="1_ih1rh"]
[ext_resource type="Texture2D" uid="uid://cptplxc5nylyl" path="res://assets/Sprites/House/Buildings/Houses_Interiors/Interior_Walls.png" id="2_pg386"]
[ext_resource type="PackedScene" uid="uid://b68ha3p51sfe3" path="res://scenes/Player/Player.tscn" id="3_q348u"]
[ext_resource type="PackedScene" uid="uid://ceod87k6taasm" path="res://scenes/Objects/Buildings/house_to_farm.tscn" id="5_qb56f"]
[ext_resource type="FontFile" uid="uid://cu5w45rcnjrwx" path="res://assets/Fonts/Daydream.ttf" id="6_y3xmc"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_o2gvv"]
texture = ExtResource("1_ih1rh")
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
0:4/0 = 0
1:4/0 = 0
2:4/0 = 0
0:5/0 = 0
1:5/0 = 0
2:5/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_7c3yg"]
texture = ExtResource("2_pg386")
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
0:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
4:3/0 = 0
5:3/0 = 0
6:3/0 = 0
7:3/0 = 0
8:3/0 = 0
9:3/0 = 0
10:3/0 = 0
11:3/0 = 0
12:3/0 = 0
13:3/0 = 0
0:4/0 = 0
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
4:4/0 = 0
5:4/0 = 0
6:4/0 = 0
7:4/0 = 0
8:4/0 = 0
9:4/0 = 0
10:4/0 = 0
11:4/0 = 0
12:4/0 = 0
13:4/0 = 0
0:5/0 = 0
1:5/0 = 0
2:5/0 = 0
3:5/0 = 0
4:5/0 = 0
5:5/0 = 0
6:5/0 = 0
7:5/0 = 0
8:5/0 = 0
9:5/0 = 0
10:5/0 = 0
11:5/0 = 0
12:5/0 = 0
13:5/0 = 0

[sub_resource type="TileSet" id="TileSet_y3jve"]
sources/0 = SubResource("TileSetAtlasSource_o2gvv")
sources/1 = SubResource("TileSetAtlasSource_7c3yg")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ox3ys"]
size = Vector2(8, 65)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_jjcy1"]
size = Vector2(51, 20)

[node name="StarterHouseInterior" type="Node2D"]
script = ExtResource("1_5lh2m")

[node name="ColorRect" type="ColorRect" parent="."]
offset_left = -2744.0
offset_top = -2421.0
offset_right = 4192.0
offset_bottom = 1688.0
color = Color(0.133196, 0.133196, 0.133196, 1)

[node name="TileMap" type="TileMap" parent="."]
tile_set = SubResource("TileSet_y3jve")
format = 2
layer_0/tile_data = PackedInt32Array(-196609, 0, 0, -131073, 0, 1, -65537, 0, 2, -1, 0, 3, 65535, 0, 4, 131071, 0, 5, -262144, 65536, 0, -196608, 65536, 1, -131072, 65536, 2, -65536, 65536, 3, 0, 65536, 4, 65536, 65536, 5, -262143, 131072, 0, -196607, 131072, 1, -131071, 131072, 2, -65535, 131072, 3, 1, 131072, 4, 65537, 131072, 5)

[node name="StaticBody2D" type="StaticBody2D" parent="."]

[node name="CollisionShape01" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(-17, 0)
shape = SubResource("RectangleShape2D_ox3ys")

[node name="CollisionShape02" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(33, -1)
shape = SubResource("RectangleShape2D_ox3ys")

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="StaticBody2D"]
position = Vector2(0, 3)
polygon = PackedVector2Array(31, -33, 11, -33, -16, -33, -24, -33, 5, -69, 12, -69, 40, -33)

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(8, 38)
shape = SubResource("RectangleShape2D_jjcy1")

[node name="Player" parent="." instance=ExtResource("3_q348u")]
position = Vector2(8, 16)
scale = Vector2(0.5, 0.5)

[node name="InteriorCamera" type="Camera2D" parent="."]
zoom = Vector2(3, 3)

[node name="HouseToFarm" parent="." instance=ExtResource("5_qb56f")]
position = Vector2(0, 16)

[node name="ExitText" type="RichTextLabel" parent="."]
offset_left = -110.0
offset_top = 94.0
offset_right = 109.0
offset_bottom = 157.0
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_fonts/normal_font = ExtResource("6_y3xmc")
theme_override_font_sizes/normal_font_size = 0
text = "Press 'E' To Exit"

[connection signal="body_entered" from="HouseToFarm" to="." method="_on_house_to_farm_body_entered"]
[connection signal="body_exited" from="HouseToFarm" to="." method="_on_house_to_farm_body_exited"]
